--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Your Ability to Love is Unlimited | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>NIGHTMARE ROOMATES 3</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Is time a friend or foe?</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>VIKKSTAR FIRST FESTIVAL MAINSTAGE 🤯 #edm #vikkstar #sidemen #festival #dance #dancemusic</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Once You Taste Silence, You Cannot Be Without It | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>A Simple Trend Following Strategy (Backed By Data)</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>Trading Strategy: Unveiling $22,275 Profit Results! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -299,7 +299,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Performance Coaching - Session 13</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -563,7 +563,7 @@
                     <div class="video-info">
                         <h3>Consciousness & the Nature of Reality | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -574,7 +574,7 @@
                     <div class="video-info">
                         <h3>Performance Update - Strategies in "11 AI Inspired Algo Trading Strategies" Book</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -794,7 +794,7 @@
                     <div class="video-info">
                         <h3>Living Goddesses | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1014,7 +1014,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 05.11.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2554,7 +2554,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 14.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">3 weeks ago</div>
+                        <div class="date">4 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5774,7 +5774,7 @@
                         <div class="video-info">
                             <h3>A Simple Trend Following Strategy (Backed By Data)</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5785,7 +5785,7 @@
                         <div class="video-info">
                             <h3>Trading Strategy: Unveiling $22,275 Profit Results! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5796,7 +5796,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Performance Coaching - Session 13</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5851,7 +5851,7 @@
                         <div class="video-info">
                             <h3>Performance Update - Strategies in "11 AI Inspired Algo Trading Strategies" Book</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5961,7 +5961,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 05.11.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -6621,7 +6621,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 14.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">3 weeks ago</div>
+                            <div class="date">4 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7894,7 +7894,7 @@
                         <div class="video-info">
                             <h3>Your Ability to Love is Unlimited | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7905,7 +7905,7 @@
                         <div class="video-info">
                             <h3>Is time a friend or foe?</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7916,7 +7916,7 @@
                         <div class="video-info">
                             <h3>Once You Taste Silence, You Cannot Be Without It | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8070,7 +8070,7 @@
                         <div class="video-info">
                             <h3>Consciousness & the Nature of Reality | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8158,7 +8158,7 @@
                         <div class="video-info">
                             <h3>Living Goddesses | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10250,7 +10250,7 @@
                         <div class="video-info">
                             <h3>NIGHTMARE ROOMATES 3</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10272,7 +10272,7 @@
                         <div class="video-info">
                             <h3>VIKKSTAR FIRST FESTIVAL MAINSTAGE 🤯 #edm #vikkstar #sidemen #festival #dance #dancemusic</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
