--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 11.11.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">28 minutes ago</div>
+                        <div class="date">50 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>You Laugh You Lose: STUDENT DRIVERS</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 11.11.2025 📱</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Trust Arthur to Have a Quote for Every Possible Scenario😅</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -288,7 +288,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Exploring Transmutation of Energy</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -299,7 +299,7 @@
                     <div class="video-info">
                         <h3>Are You Doing What Truly Matters to You? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -464,7 +464,7 @@
                     <div class="video-info">
                         <h3>Why Exits Are Harder Than Entries in Trading 😬</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -794,7 +794,7 @@
                     <div class="video-info">
                         <h3>Entries Are Strategy, Exits Are Psychology 🧠</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1003,7 +1003,7 @@
                     <div class="video-info">
                         <h3>The Secret to Sticking With Your Trading Plan</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1773,7 +1773,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Every Day Gets Lighter When You Let Go of Yourself</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -2297,9 +2297,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=81ZPu4II1nQ" target="_blank">
-                    <img src="https://i.ytimg.com/vi/81ZPu4II1nQ/mqdefault.jpg" alt="Don't Keep Your Spine Angle in the Golf Swing - It's Killing Your Ball Striking!">
+                    <img src="https://i.ytimg.com/vi/81ZPu4II1nQ/mqdefault.jpg" alt="The Golf Swing is an ILLUSION - Most Golfers Never Discover This Truth">
                     <div class="video-info">
-                        <h3>Don't Keep Your Spine Angle in the Golf Swing - It's Killing Your Ball Striking!</h3>
+                        <h3>The Golf Swing is an ILLUSION - Most Golfers Never Discover This Truth</h3>
                         <div class="channel">SagutoGolf</div>
                         <div class="date">3 weeks ago</div>
                     </div>
@@ -5741,7 +5741,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 11.11.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">28 minutes ago</div>
+                            <div class="date">50 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5752,7 +5752,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 11.11.2025 📱</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5829,7 +5829,7 @@
                         <div class="video-info">
                             <h3>Why Exits Are Harder Than Entries in Trading 😬</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5873,7 +5873,7 @@
                         <div class="video-info">
                             <h3>Entries Are Strategy, Exits Are Psychology 🧠</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5950,7 +5950,7 @@
                         <div class="video-info">
                             <h3>The Secret to Sticking With Your Trading Plan</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7949,7 +7949,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Exploring Transmutation of Energy</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7960,7 +7960,7 @@
                         <div class="video-info">
                             <h3>Are You Doing What Truly Matters to You? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8389,7 +8389,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Every Day Gets Lighter When You Let Go of Yourself</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -10086,9 +10086,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=81ZPu4II1nQ" target="_blank">
-                        <img src="https://i.ytimg.com/vi/81ZPu4II1nQ/mqdefault.jpg" alt="Don't Keep Your Spine Angle in the Golf Swing - It's Killing Your Ball Striking!">
+                        <img src="https://i.ytimg.com/vi/81ZPu4II1nQ/mqdefault.jpg" alt="The Golf Swing is an ILLUSION - Most Golfers Never Discover This Truth">
                         <div class="video-info">
-                            <h3>Don't Keep Your Spine Angle in the Golf Swing - It's Killing Your Ball Striking!</h3>
+                            <h3>The Golf Swing is an ILLUSION - Most Golfers Never Discover This Truth</h3>
                             <div class="channel">SagutoGolf</div>
                             <div class="date">3 weeks ago</div>
                         </div>
@@ -10228,7 +10228,7 @@
                         <div class="video-info">
                             <h3>You Laugh You Lose: STUDENT DRIVERS</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10261,7 +10261,7 @@
                         <div class="video-info">
                             <h3>Trust Arthur to Have a Quote for Every Possible Scenario😅</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
