--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Returning Home to the Seat of Consciousness</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">56 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Why Great Traders Plan Their Exit Before Taking a Trade</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">56 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>You Laugh You Lose: STUDENT DRIVERS</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Is time a friend or foe?</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Trust Arthur to Have a Quote for Every Possible Scenario😅</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -1113,7 +1113,7 @@
                     <div class="video-info">
                         <h3>Technical analysis of the EURUSD...</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5741,7 +5741,7 @@
                         <div class="video-info">
                             <h3>Why Great Traders Plan Their Exit Before Taking a Trade</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">56 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -6016,7 +6016,7 @@
                         <div class="video-info">
                             <h3>Technical analysis of the EURUSD...</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7894,7 +7894,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Returning Home to the Seat of Consciousness</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">56 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7927,7 +7927,7 @@
                         <div class="video-info">
                             <h3>Is time a friend or foe?</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10228,7 +10228,7 @@
                         <div class="video-info">
                             <h3>You Laugh You Lose: STUDENT DRIVERS</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10261,7 +10261,7 @@
                         <div class="video-info">
                             <h3>Trust Arthur to Have a Quote for Every Possible Scenario😅</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
